--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,8 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Tab 1
-    </ion-title>
+    <ion-button class="searchButton" (click)="openModal()">
+      <div class="ion-text-left">Search</div>
+    </ion-button>
   </ion-toolbar>
 </ion-header>
 
