--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -3,6 +3,9 @@
     <ion-button class="searchButton" (click)="openModal()">
       <div class="ion-text-left">Search</div>
     </ion-button>
+    <ion-button (click)="nextpage()">
+      <ion-icon name="arrow-redo-outline"></ion-icon>
+    </ion-button>
   </ion-toolbar>
 </ion-header>
 
