Info and history page

--- a/src/app/history/history.page.html
+++ b/src/app/history/history.page.html
@@ -4,7 +4,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/select-campus"></ion-back-button>
     </ion-buttons>
-    <ion-title>Info</ion-title>
+    <ion-title>History</ion-title>
   </ion-toolbar>
 </ion-header>
 
