--- a/src/app/edit/edit.page.html
+++ b/src/app/edit/edit.page.html
@@ -8,29 +8,41 @@
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding">
-  <form [formGroup] = "reportForm" (ngSubmit)="submit()">
-    <ion-list>
-      <ion-item>
-        <ion-label position="floating">POI Name</ion-label>
-        <ion-input formControlName="poiName" inputmode="text"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-label>Report Type</ion-label>
-        <ion-select formControlName="reportType" value="brown" okText="Okay" cancelText="Dismiss">
-          <ion-select-option value="brown">Brown</ion-select-option>
-          <ion-select-option value="blonde">Blonde</ion-select-option>
-          <ion-select-option value="black">Black</ion-select-option>
-          <ion-select-option value="red">Red</ion-select-option>
-        </ion-select>
-      </ion-item>
-      <ion-item>
-       <ion-label position="floating">Comments</ion-label>
-       <ion-textarea formControlName="comments" placeholder="Enter more information here..."></ion-textarea>
-      </ion-item>
-      <ion-button [disabled]="!reportForm.valid" type="submit" expand="block">Send</ion-button>
-    </ion-list>
-  </form>
-  </div>
+  <ion-grid class="ion-no-margin">
+    <!-- form one here -->
+    <ion-row *ngIf="reportForm">
+      <ion-col size="12" class="ion-no-margin ion-no-padding title">
+      </ion-col>
+      <ion-col size="12" class="form">
+        <form [formGroup]="reportForm" (ngSubmit)="submit(reportForm.value)" class="ion-margin-top">
+          <ion-item lines="none">
+            <ion-label position="stacked" color="accent">POI Name <span>*</span></ion-label>
+            <ion-input formControlName="poiName" type="text" placeholder="Enter your first name"></ion-input>
+          </ion-item>
+          <!-- Error messages
+          <div class="validation-errors">
+            <ng-container *ngFor="let validation of form_one_validation_messages.firstName">
+              <div class="error-message"
+                *ngIf="form_one.get('firstName').hasError(validation.type) && (form_one.get('firstName').dirty || form_one.get('firstName').touched)">
+                {{ validation.message }}
+              </div>
+            </ng-container>
+          </div> -->
+          <ion-item lines="none">
+            <ion-label position="stacked" color="accent">Report Type</ion-label>
+            <ion-select formControlName="reportType" value="fraud" okText="Okay" cancelText="Dismiss">
+              <ion-select-option value="fraud">Fraud</ion-select-option>
+              <ion-select-option value="abuse">Abuse</ion-select-option>
+            </ion-select>
+          </ion-item>
+          <ion-item lines="none">
+            <ion-label position="stacked" color="accent">Comments</ion-label>
+            <ion-textarea formControlName="comments" placeholder="Enter more information here..."></ion-textarea>
+           </ion-item>
+          <ion-button class="ion-float-start" type="submit" >Send</ion-button>
+        </form>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
   {{ reportForm.value | json}}
 </ion-content>
