Fix route and add services

--- a/src/app/poi-report/poi-report.page.html
+++ b/src/app/poi-report/poi-report.page.html
@@ -14,23 +14,20 @@
       <ion-col size="12" class="ion-no-margin ion-no-padding title">
       </ion-col>
       <ion-col size="12" class="form">
-        <form [formGroup]="reportForm" (ngSubmit)="submit()" class="ion-margin-top">
-          <ion-item lines="none">
-            <ion-label position="stacked" color="accent">POI Name <span>*</span></ion-label>
-            <ion-input formControlName="poiName" type="text" placeholder="Enter your first name"></ion-input>
+        <form [formGroup]="reportForm"  class="ion-margin-top">
+          <ion-item>
+            <ion-label position="floating">Place Name</ion-label>
+            <ion-input formControlName="placeName" type="text" [class.invalid]="!reportForm.controls.placeName.valid"></ion-input>
           </ion-item>
-          <!-- Error messages
-          <div class="validation-errors">
-            <ng-container *ngFor="let validation of form_one_validation_messages.firstName">
-              <div class="error-message"
-                *ngIf="form_one.get('firstName').hasError(validation.type) && (form_one.get('firstName').dirty || form_one.get('firstName').touched)">
-                {{ validation.message }}
-              </div>
-            </ng-container>
-          </div> -->
+  
+          <ion-item *ngIf="!reportForm.controls.placeName.valid  ">
+            <p>Please fill up name of the place.</p>
+          </ion-item>
+         
           <ion-item lines="none">
             <ion-label position="stacked" color="accent">Report Type</ion-label>
-            <ion-select formControlName="reportType" value="fraud" okText="Okay" cancelText="Dismiss">
+            <ion-select formControlName="reportType" value="fraud" okText="Okay" cancelText="Dismiss"
+            [class.invalid]="!reportForm.controls.reportType.valid">
               <ion-select-option value="fraud">Fraud</ion-select-option>
               <ion-select-option value="abuse">Abuse</ion-select-option>
             </ion-select>
@@ -39,10 +36,11 @@
             <ion-label position="stacked" color="accent">Comments</ion-label>
             <ion-textarea formControlName="comments" placeholder="Enter more information here..."></ion-textarea>
            </ion-item>
-          <ion-button class="ion-float-start" type="submit" >Send</ion-button>
+
         </form>
+        <ion-button expand="full" color="primary" (click)="save()">Submit Info</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
-  {{ reportForm.value | json}}
+ 
 </ion-content>
