--- a/src/app/edit/edit.page.html
+++ b/src/app/edit/edit.page.html
@@ -8,41 +8,50 @@
 </ion-header>
 
 <ion-content>
-  <ion-grid class="ion-no-margin">
-    <!-- form one here -->
-    <ion-row *ngIf="reportForm">
-      <ion-col size="12" class="ion-no-margin ion-no-padding title">
-      </ion-col>
-      <ion-col size="12" class="form">
-        <form [formGroup]="reportForm" (ngSubmit)="submit(reportForm.value)" class="ion-margin-top">
-          <ion-item lines="none">
-            <ion-label position="stacked" color="accent">POI Name <span>*</span></ion-label>
-            <ion-input formControlName="poiName" type="text" placeholder="Enter your first name"></ion-input>
-          </ion-item>
-          <!-- Error messages
-          <div class="validation-errors">
-            <ng-container *ngFor="let validation of form_one_validation_messages.firstName">
-              <div class="error-message"
-                *ngIf="form_one.get('firstName').hasError(validation.type) && (form_one.get('firstName').dirty || form_one.get('firstName').touched)">
-                {{ validation.message }}
-              </div>
-            </ng-container>
-          </div> -->
-          <ion-item lines="none">
-            <ion-label position="stacked" color="accent">Report Type</ion-label>
-            <ion-select formControlName="reportType" value="fraud" okText="Okay" cancelText="Dismiss">
-              <ion-select-option value="fraud">Fraud</ion-select-option>
-              <ion-select-option value="abuse">Abuse</ion-select-option>
-            </ion-select>
-          </ion-item>
-          <ion-item lines="none">
-            <ion-label position="stacked" color="accent">Comments</ion-label>
-            <ion-textarea formControlName="comments" placeholder="Enter more information here..."></ion-textarea>
-           </ion-item>
-          <ion-button class="ion-float-start" type="submit" >Send</ion-button>
-        </form>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-  {{ reportForm.value | json}}
+
+   <!-- requiredInfo -->
+   <form [formGroup]="requiredInfo">
+        <ion-item>
+          <ion-label position="floating">Place Name</ion-label>
+          <ion-input formControlName="placeName" type="text" [class.invalid]="!requiredInfo.controls.placeName.valid"></ion-input>
+        </ion-item>
+
+        <ion-item *ngIf="!requiredInfo.controls.placeName.valid  ">
+          <p>Please fill up name of the place.</p>
+        </ion-item>
+
+       
+
+        <ion-item lines="none">
+          <ion-label position="stacked" color="accent">Category of the place</ion-label>
+          <ion-select formControlName="categoryName" value="fraud" okText="Okay" cancelText="Dismiss" [class.invalid]="!requiredInfo.controls.categoryName.valid">
+            <ion-select-option *ngFor="let categoryData of categoryData" [value]="categoryData.category_name">{{categoryData.category_name}}</ion-select-option>
+         
+          </ion-select>
+        </ion-item>
+        <ion-item *ngIf="!requiredInfo.controls.categoryName.valid  ">
+          <p>Please fill up category of the place.</p>
+        </ion-item>
+
+
+
+  </form>
+  
+
+
+
+
+
+
+  <!-- Additional Info -->
+  <form [formGroup]="additionalInfo">
+
+    <ion-button expand="full" color="light" (click)="addControl()">Add Info</ion-button>
+
+    <ion-item *ngFor="let control of additionalInfo.controls | keyvalue">
+      <ion-input required type="text" [formControlName]="control.key" placeHolder="Field value"></ion-input>
+      <ion-icon (click)="removeControl(control)" name="close-circle"></ion-icon>
+    </ion-item>
+  </form>
+  <ion-button expand="full" color="primary" (click)="save()">Submit Info</ion-button>
 </ion-content>
