--- a/src/app/poi-info/poi-info.page.html
+++ b/src/app/poi-info/poi-info.page.html
@@ -40,8 +40,8 @@
 
       <div *ngFor="let item of poiInfo">
         <p class="ion-text-wrap">ID : {{ item.poiID }}</p><br>
-        <p class="ion-text-wrap">Latitude : {{ item.latitude }}</p><br>
-        <p class="ion-text-wrap">Longitude : {{ item.longitude }}</p><br>
+        <p class="ion-text-wrap">Latitude : {{ item.x }}</p><br>
+        <p class="ion-text-wrap">Longitude : {{ item.y }}</p><br>
       </div>
 
     </div>
