--- a/src/app/edit/edit.page.html
+++ b/src/app/edit/edit.page.html
@@ -33,8 +33,14 @@
           <p>Please fill up category of the place.</p>
         </ion-item>
 
-
-
+        <ion-item>
+          <ion-label position="fixed">Latitude</ion-label>
+          <ion-input placeholder="placeholder" value={{this.poi.latitude}} disabled></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label position="fixed">Longitude</ion-label>
+          <ion-input placeholder="placeholder" value="{{this.poi.longitude}}" disabled></ion-input>
+        </ion-item>
   </form>
   
 
