--- a/src/app/edit/edit.page.scss
+++ b/src/app/edit/edit.page.scss
@@ -1,5 +1,5 @@
 ion-content {
-  --background: url(/assets/imgs/background/29.jpg) no-repeat center/cover fixed;
+  // --background: url(/assets/imgs/background/29.jpg) no-repeat center/cover fixed;
   height: 100%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -12,59 +12,59 @@ round-progress {
 
 .title {
   h2 {
-      text-overflow: inherit;
-      overflow: inherit;
-      color: #30384c;
-      font-weight: 700 !important;
-      font-size: 17px;
-      line-height: 22px;
-      letter-spacing: 1px;
+    text-overflow: inherit;
+    overflow: inherit;
+    color: #30384c;
+    font-weight: 700 !important;
+    font-size: 17px;
+    line-height: 22px;
+    letter-spacing: 1px;
   }
 
   p {
-      color: #7f8490;
-      font-weight: 400 !important;
-      font-size: var(--h5-font-size, 12px) !important;
-      line-height: 18px;
-      letter-spacing: 1px;
+    color: #7f8490;
+    font-weight: 400 !important;
+    font-size: var(--h5-font-size, 12px) !important;
+    line-height: 18px;
+    letter-spacing: 1px;
   }
 
   .progress-text {
-      position: absolute;
-      left: 10%;
+    position: absolute;
+    left: 10%;
   }
 }
 
 .form {
   ion-item {
-      --padding-start: 0 !important;
-      --inner-padding-end: 0;
-      --background: transparent;
-      --ripple-color: transparent;
+    --padding-start: 0 !important;
+    --inner-padding-end: 0;
+    --background: transparent;
+    --ripple-color: transparent;
 
-      ion-label {
-          transform: none;
-          margin: 5px 0 0 0 !important;
-          transform: none;
-          margin: 5px 16px 0 16px !important;
-          width: calc(100% - 32px);
-      }
+    ion-label {
+      transform: none;
+      margin: 5px 0 0 0 !important;
+      transform: none;
+      margin: 5px 16px 0 16px !important;
+      width: calc(100% - 32px);
+    }
 
-      ion-input {
-          --background: var(--cs-background-primary) !important;
-          --padding-bottom: 10px;
-          --padding-end: 10px;
-          --padding-start: 10px;
-          --padding-top: 10px;
-          box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2) !important;
-          margin: 10px 16px !important;
-          width: calc(100% - 32px);
-          border-radius: 5px;
-      }
+    ion-input {
+      --background: var(--cs-background-primary) !important;
+      --padding-bottom: 10px;
+      --padding-end: 10px;
+      --padding-start: 10px;
+      --padding-top: 10px;
+      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2) !important;
+      margin: 10px 16px !important;
+      width: calc(100% - 32px);
+      border-radius: 5px;
+    }
   }
 
   ion-radio-group {
-      margin: 5px 16px 0 16px !important;
+    margin: 5px 16px 0 16px !important;
   }
 }
 
