--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,21 +1,32 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
 
-<ion-content>
-  <div> 
-    <form [formGroup] = 'form' (ngSubmit) = 'login()'> 
-        <label>Username</label> 
-        <input type = 'text' formControlName = 'email' /> 
-        <label>Password</label> 
-        <input type = 'password' formControlName = 'password' /> 
-        <div> 
-            <button type ='submit' [disabled] = '!this.form.valid'> 
-                Login 
-            </button> 
-        </div> 
-    </form> 
-</div>
+
+
+<ion-content color="primary" padding>
+  <form [formGroup] = 'form' (ngSubmit) = 'login()'>
+    <ion-grid>
+      <ion-row color="primary" justify-content-center>
+        <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
+          <div text-center>
+            <h3>Login</h3>
+          </div>
+          <div padding>
+            <ion-item>
+              <ion-input name="email" formControlName = 'email' type="email" placeholder="your@email.com" ngModel required></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-input name="password" formControlName = 'password' type="password" placeholder="Password" ngModel required></ion-input>
+            </ion-item>
+          </div>
+          <div padding>
+            <ion-button size="large" type="submit" [disabled] = '!this.form.valid' expand="block">Login</ion-button>
+          </div>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </form>
 </ion-content>
+
+
+
+
+
