Dashboard and leaderboard page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <ion-app>
   <ion-router-outlet></ion-router-outlet>
-  <div *ngIf="buttonLogout">
+  <!-- <div *ngIf="buttonLogout">
     <ion-button class="LogoutButton" (click)="logout()">
     <div class="ion-text-left">Logout</div>
   </ion-button>
@@ -9,6 +9,6 @@
     <ion-button class="LogoutButton" (click)="login()">
       <div class="ion-text-left">Login</div>
     </ion-button>
-  </div>
+  </div> -->
 
 </ion-app>
