--- a/src/app/dashboard/leaderboard/leaderboard.page.html
+++ b/src/app/dashboard/leaderboard/leaderboard.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>Leaderboard</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button menu="main-menu"></ion-menu-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
@@ -20,4 +23,3 @@
     </ngx-datatable>
   </ion-card>
 </ion-content>
-
