--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,35 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+
+  <ion-menu menuId="main-menu" content-id="main">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Dashboard</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list>
+        <ion-menu-toggle>
+          <ion-item routerLink="dashboard">
+            <ion-icon name="mail" slot="start"></ion-icon>
+            <ion-label>Dashboard</ion-label>
+          </ion-item>
+          <ion-item routerLink="chart">
+            <ion-icon name="mail" slot="start"></ion-icon>
+            <ion-label>Chart</ion-label>
+          </ion-item>
+          <ion-item routerLink="leaderboard">
+            <ion-icon name="mail" slot="start"></ion-icon>
+            <ion-label>Leaderboard</ion-label>
+          </ion-item>
+          <ion-item routerLink="badges">
+            <ion-icon name="mail" slot="start"></ion-icon>
+            <ion-label>Badges</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+  <ion-router-outlet id="main"></ion-router-outlet>
   <!-- <div *ngIf="buttonLogout">
     <ion-button class="LogoutButton" (click)="logout()">
     <div class="ion-text-left">Logout</div>
