--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,15 +1,42 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+     Welcome  {{nickname}}
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-card>
+    <ion-item>
+      <!-- <ion-img [src]="item.src"></ion-img> -->
+      <ion-icon name="person-outline"></ion-icon>
+      <ion-label>User detail</ion-label>
+      <ion-button fill="outline" slot="end">Dashboard</ion-button>
+    </ion-item>
+  
+    <ion-card-content>
+      <div *ngFor="let profile_data of profile_data">
+      
+        <ion-badge color="secondary">Full Name</ion-badge>
+        <div>{{profile_data.full_name}}</div>
+        <ion-badge color="secondary">Nickname</ion-badge>
+        <div>{{profile_data.nickname}}</div>
+        <ion-badge color="secondary">Email</ion-badge>
+        <div>{{profile_data.email}}</div>
+        <ion-badge color="secondary">Mobile Number</ion-badge>
+        <div>{{profile_data.mobile_number}}</div>
+        <ion-badge color="secondary">Status</ion-badge>
+        <div>{{profile_data.status}}</div>
+      </div>
+    
+    </ion-card-content>
+  </ion-card>
+
+  <div *ngIf="buttonLogout">
+    <ion-button class="LogoutButton" (click)="logout()">
+    <div class="ion-text-left">Logout</div>
+  </ion-button>
+  </div>
+  
 </ion-content>
