--- a/src/app/search-modal/search-modal.component.html
+++ b/src/app/search-modal/search-modal.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-searchbar showCancelButton="focus" (keyup)="onKey($event)" [(ngModel)]="searchPoi"  placeholder="Find place you want to go" ></ion-searchbar>
+    <ion-searchbar  [(ngModel)]="term"  placeholder="Find place you want to go" ></ion-searchbar>
     <ion-buttons slot="end">
       <ion-button (click)="dismissModal()">Close</ion-button>
     </ion-buttons>
@@ -10,8 +10,15 @@
 <ion-content>
   <div class="ion-padding">
     <ion-list>
-     <ion-item *ngFor="let item of pOIData">{{ item.name }}</ion-item>
+     <ion-item *ngFor="let item of data |filter:term" (click)="onClick(item.poi_latitude , item.poi_longitude)">
+        <ion-label>
+          <h3>{{ item.name }}</h3>
+        </ion-label>
+    
+     </ion-item>
       <ion-item *ngIf="noResult">No Result</ion-item>
     </ion-list>
+  
   </div>
 </ion-content>
+
