--- a/src/app/poi-info/poi-info.page.html
+++ b/src/app/poi-info/poi-info.page.html
@@ -1,48 +1,61 @@
-
-<ion-header translucent>
+<ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
-    <ion-title>Poi info</ion-title>
+    <ion-title>Poi Info</ion-title>
   </ion-toolbar>
-  
 </ion-header>
 
 <ion-content>
+    <ion-button (click)="buttonInfo()">
+      <ion-icon slot="start" ></ion-icon>
+      Info
+    </ion-button>
+    
+    <ion-button  (click)="buttonHistory(id)">
+      <ion-icon slot="end" ></ion-icon>
+      History
+    </ion-button>
+    <ion-item>
+      <!-- <ion-img [src]="item.src"></ion-img> -->
+      <ion-icon name="person-outline"></ion-icon>
+      <ion-label>Poi Info</ion-label>
+      <!-- <ion-button fill="outline" slot="end">View</ion-button> -->
+    </ion-item>
+    <div *ngIf="checkdata">
+    
+        <ion-badge color="secondary">Id</ion-badge>
+        <div>{{data.id}}</div>
+        <ion-badge color="secondary">Name</ion-badge>
+        <div>{{data.name ? data.name : "Sorry no information yet"}}</div>
+        <ion-badge color="secondary">Fields</ion-badge>
+        <div > 
+          {{ fields.field}}
+        </div>
+        <ion-badge color="secondary">Latitude</ion-badge>
+        <div>{{data.poi_latitude ? data.poi_latitude : "Sorry no information yet" }}</div>
+        <ion-badge color="secondary">Longitude</ion-badge>
+        <div>{{data.poi_longitude ? data.poi_longitude : "Sorry no information yet"}}</div>
+     
+    </div>
+    
+    <div>
+      <div>No info</div>
+    </div>
+    
+    
+  <!-- Icons -->
+<ion-button (click)="buttonEdit()">
+  <ion-icon slot="start" ></ion-icon>
+  Edit
+</ion-button>
 
-  <!-- display poi image -->
-  <img src="https://study.com/cimages/videopreview/videopreview-full/izfvnkemcz.jpg" >
-  <div *ngFor="let item of poiInfo">
-        <!-- <p class="ion-text-wrap">ID : {{ item.poiID }}</p><br>
-        <p class="ion-text-wrap">Latitude : {{ item.latitude }}</p><br>
-        <p class="ion-text-wrap">Longitude : {{ item.longitude }}</p><br> -->
-        <ion-card>
-          <ion-card-header>
-            <ion-card-subtitle>Latitude : {{ item.latitude }} , Longitude : {{ item.longitude }}</ion-card-subtitle>
-            <ion-card-title>No place name</ion-card-title>
-          </ion-card-header>
-        
-          <ion-card-content>
-            No place information
-          </ion-card-content>
-          
-        </ion-card>
-      </div>
-  
-  
+<ion-button (click)="buttonReport(id)">
+  <ion-icon slot="end" ></ion-icon>
+  Report
+</ion-button>
+ 
 
-  
-  
 
-  <!-- tab buttons -->
-  <ion-footer >
-    <ion-toolbar class="footerPOI">
-      <div id="button-info-history" class="ion-padding">
-        <ion-button class="button-info" (click)="buttonEdit()">Edit</ion-button>
-  
-        <ion-button class="button-history" (click)="buttonReport()">Report</ion-button>
-      </div>
-    </ion-toolbar>
-  </ion-footer>
 </ion-content>
