--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,14 +1,18 @@
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Login</ion-title>
+  </ion-toolbar>
+</ion-header>
 
 
-
-<ion-content color="primary" padding>
+<ion-content  padding>
   <form [formGroup] = 'form' (ngSubmit) = 'login()'>
     <ion-grid>
-      <ion-row color="primary" justify-content-center>
+      <ion-row justify-content-center>
         <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
-          <div text-center>
-            <h3>Login</h3>
-          </div>
           <div padding>
             <ion-item>
               <ion-input name="email" formControlName = 'email' type="email" placeholder="your@email.com" ngModel required></ion-input>
@@ -24,6 +28,10 @@
       </ion-row>
     </ion-grid>
   </form>
+
+  <p text-center>Don't have a account?</p>
+  <ion-button expand="full" color="danger" (click)="register()">Register</ion-button>
+
 </ion-content>
 
 
