--- a/src/app/edit/edit.page.html
+++ b/src/app/edit/edit.page.html
@@ -8,47 +8,40 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-badge color="secondary">{{message}}</ion-badge>
    <!-- requiredInfo -->
    <form [formGroup]="requiredInfo">
-        <ion-item>
-          <ion-label position="floating">Place Name</ion-label>
-          <ion-input formControlName="placeName" type="text" [class.invalid]="!requiredInfo.controls.placeName.valid"></ion-input>
-        </ion-item>
+     
+      
+          <ion-item>
+            <ion-label position="floating">Place Name</ion-label>
+            <ion-input formControlName="name" type="text" value="sasa" [class.invalid]="!requiredInfo.controls.name.valid"></ion-input>
+          </ion-item>
 
-        <ion-item *ngIf="!requiredInfo.controls.placeName.valid  ">
-          <p>Please fill up name of the place.</p>
-        </ion-item>
+          <ion-item lines="none">
+            <ion-label position="stacked" color="accent">Category of the place</ion-label>
+            <ion-select formControlName="category"  cancelText="Dismiss" [class.invalid]="!requiredInfo.controls.category.valid">
+              <ion-select-option *ngFor="let categoryData of categoryData" [value]="categoryData.category_name">{{categoryData.category_name}}</ion-select-option>
+          
+            </ion-select>
+          </ion-item>
+          <ion-item *ngIf="!requiredInfo.controls.category.valid  ">
+            <p>Please fill up category of the place.</p>
+          </ion-item>
 
-       
-
-        <ion-item lines="none">
-          <ion-label position="stacked" color="accent">Category of the place</ion-label>
-          <ion-select formControlName="categoryName" value="fraud" okText="Okay" cancelText="Dismiss" [class.invalid]="!requiredInfo.controls.categoryName.valid">
-            <ion-select-option *ngFor="let categoryData of categoryData" [value]="categoryData.category_name">{{categoryData.category_name}}</ion-select-option>
-         
-          </ion-select>
-        </ion-item>
-        <ion-item *ngIf="!requiredInfo.controls.categoryName.valid  ">
-          <p>Please fill up category of the place.</p>
-        </ion-item>
-
-        <ion-item>
-          <ion-label position="fixed">Latitude</ion-label>
-          <ion-input placeholder="placeholder" value={{this.poi.latitude}} disabled></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-label position="fixed">Longitude</ion-label>
-          <ion-input placeholder="placeholder" value="{{this.poi.longitude}}" disabled></ion-input>
-        </ion-item>
+    <div  *ngFor="let poi of poi">
+      <ion-item>
+        <ion-label position="fixed">Latitude</ion-label>
+        <ion-input  formControlName="poi_latitude"   disabled></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="fixed">Longitude</ion-label>
+        <ion-input formControlName="poi_longitude"  disabled></ion-input>
+      </ion-item>
+    </div>
+          
   </form>
   
-
-
-
-
-
-
   <!-- Additional Info -->
   <form [formGroup]="additionalInfo">
 
@@ -59,5 +52,9 @@
       <ion-icon (click)="removeControl(control)" name="close-circle"></ion-icon>
     </ion-item>
   </form>
-  <ion-button expand="full" color="primary" (click)="save()">Submit Info</ion-button>
+  
+  <ion-button *ngIf="adddata" expand="full" color="primary" (click)="save()">Add Info</ion-button>
+
+  <ion-button *ngIf="updatedata" expand="full" color="primary" (click)="update(poi_id)">Update Info</ion-button>
+  
 </ion-content>
