--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,8 @@
     <ion-button class="LogoutButton" (click)="logout()">
     <div class="ion-text-left">Logout</div>
   </ion-button>
-  </div>
-  <div *ngIf="buttonLogin">
+  </div> -->
+  <!-- <div *ngIf="buttonLogin">
     <ion-button class="LogoutButton" (click)="login()">
       <div class="ion-text-left">Login</div>
     </ion-button>
