Fix upload image

--- a/src/app/edit/edit.page.html
+++ b/src/app/edit/edit.page.html
@@ -38,10 +38,10 @@
         <ion-label position="fixed">Longitude</ion-label>
         <ion-input formControlName="poi_longitude"  disabled></ion-input>
       </ion-item>
-    
-      <input formControlName="file" (change)="setImageFile($event)" type="file" id="selectFile" name="selectFile" class="btn btn-success">
+      <input  formControlName="image_poi"  (change)="setImageFile($event)" type="file" id="selectFile" name="selectFile" class="btn btn-success">
+      
   </form>
-  <!-- <input type="file" (change)="onFileChange($event)"/> -->
+  <!-- <input  (change)="setImageFile($event)" type="file" id="selectFile" name="selectFile" class="btn btn-success"> -->
   <!-- Additional Info -->
   <form [formGroup]="additionalInfo">
 
