--- a/src/app/dashboard/leaderboard/leaderboard.page.scss
+++ b/src/app/dashboard/leaderboard/leaderboard.page.scss
@@ -3,6 +3,11 @@ ion-content {
   --padding-end: 20px;
   --padding-start: 20px;
   --padding-top: 20px;
+  --ion-background-color:#111D12;
+}
+
+ion-card{
+    --ion-background-color:white;
 }
 
 :root {
