--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,10 @@
             <ion-icon name="mail" slot="start"></ion-icon>
             <ion-label>Chart</ion-label>
           </ion-item>
+                <ion-item routerLink="roles">
+            <ion-icon name="mail" slot="start"></ion-icon>
+            <ion-label>Roles</ion-label>
+          </ion-item>
           <ion-item routerLink="leaderboard">
             <ion-icon name="mail" slot="start"></ion-icon>
             <ion-label>Leaderboard</ion-label>
