--- a/src/app/edit/edit.page.html
+++ b/src/app/edit/edit.page.html
@@ -42,13 +42,13 @@
       
   </form>
   
-  <form [formGroup] = "uploadForm" (ngSubmit)="onSubmit()" *ngIf="updatedata">      
+  <form [formGroup] = "uploadForm"  *ngIf="updatedata">      
     <div>
       <input type="file" name="profile" (change)="onFileSelect($event)" />
     </div>
-    <div>
+    <!-- <div>
       <button type="submit">Upload</button>
-    </div>
+    </div> -->
   </form>
 
   <!-- Additional Info -->
@@ -64,7 +64,7 @@
   
   <ion-button *ngIf="adddata" expand="full" color="primary" (click)="save()">Add Info</ion-button>
 
-  <ion-button *ngIf="updatedata" expand="full" color="primary" (click)="update(poi_id)"  >Update Info</ion-button>
+  <ion-button *ngIf="updatedata" expand="full" color="primary" (click)="onSubmit(poi_id)">Update Info</ion-button>
   
 </ion-content>
  
