--- a/src/global.scss
+++ b/src/global.scss
@@ -16,7 +16,7 @@
 @import "~@ionic/angular/css/normalize.css";
 @import "~@ionic/angular/css/structure.css";
 @import "~@ionic/angular/css/typography.css";
-@import '~@ionic/angular/css/display.css';
+@import "~@ionic/angular/css/display.css";
 
 /* Optional CSS utils that can be commented out */
 @import "~@ionic/angular/css/padding.css";
@@ -25,4 +25,12 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
-@import "~leaflet/dist/leaflet.css"
+@import "~leaflet/dist/leaflet.css";
+
+//define all header each page
+ion-toolbar {
+  --background: linear-gradient(179.17deg, #597eab 29.07%, #09446c 117.37%);
+}
+ion-title {
+  color: #ffffff;
+}
