Fix poi-info page

--- a/src/app/poi-info/poi-info.page.html
+++ b/src/app/poi-info/poi-info.page.html
@@ -12,47 +12,47 @@
 <ion-content [fullscreen]="true">
  
     <ion-item>
-      <!-- <ion-img [src]="item.src"></ion-img> -->
-      <ion-icon name="person-outline"></ion-icon>
-      <ion-label>Poi detail </ion-label>
+      <ion-icon name="business"></ion-icon>
+      <ion-label>Place detail </ion-label>
       <ion-button fill="outline" slot="end" (click)="buttonHistory(id)">View history</ion-button>
     </ion-item>
-  
-    
+
     <div *ngIf="checkdata">
-    
       <ion-badge color="secondary">Id</ion-badge>
       <div>{{data.id}}</div>
       <ion-badge color="secondary">Name</ion-badge>
       <div>{{data.name}}</div>
       <ion-badge color="secondary">Fields</ion-badge>
-      <div>{{fields.field}}</div>
+      <div *ngFor="let data of fields;">{{data.key}} => {{data.value}}</div>
       <ion-badge color="secondary">Latitude</ion-badge>
       <div>{{data.poi_latitude}}</div>
       <ion-badge color="secondary">Longitude</ion-badge>
       <div>{{data.poi_longitude}}</div>
+      <ion-badge color="secondary">Image Poi</ion-badge>
+      <img src="{{baseUrl}}{{image}}"  width="500" height="600">
     </div>
-    
+
+    <br>
+    <br>
     <div id="map" style="width: 100%; height: 50%">
     </div>
     
   
-<br>
-<br>
-   <!-- Icons -->
-  <div class="button">
-    <ion-button (click)="buttonEdit()" class="button-edit">
-      <ion-icon slot="start" ></ion-icon>
-      Edit
-    </ion-button>
-    
-    <ion-button (click)="buttonReport(id)" class="button-report">
-      <ion-icon slot="end" ></ion-icon>
-      Report
-    </ion-button>
-  </div>
-
+    <br>
+    <br>
   
+    <div class="button">
+      <ion-button (click)="buttonEdit()" class="button-edit">
+        <ion-icon slot="start" ></ion-icon>
+        Edit Place
+      </ion-button>
+      
+      <ion-button (click)="buttonReport(id)" class="button-report">
+        <ion-icon slot="end" ></ion-icon>
+        Report Place
+      </ion-button>
+    </div>
+
 </ion-content>
 
 
