Adding error message when login

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -29,6 +29,10 @@
     </ion-grid>
   </form>
 
+  <div *ngIf="errorMessage"> 
+    <ion-badge color="primary">Wrong password or email</ion-badge>
+  </div>
+
   <p text-center>Don't have a account?</p>
   <ion-button expand="full" color="danger" (click)="register()">Register</ion-button>
 
